--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -112,7 +112,7 @@
 
         .newsletter-input {
           font-size: 16px;
-          width: 303px;
+          width: 170px;
         }
       }
 
