--- a/scss/index.scss
+++ b/scss/index.scss
@@ -63,7 +63,7 @@ body {
 
 @media only screen and (max-width: 1110px) {
   :root {
-    --padding-section-large: 16px 32px;
+    --padding-section-large: 16px 16px;
     --font-size-m: 1rem;
   }
 
